--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ d.addEventListener ? d.addEventListener("click",_gaLt,!1) : d.attachEvent && d.a
   <div id=topwrap style="padding-left : 40px">
 <h1>Iftach Haitner - <span style="font-size : 125%"> יפתח הייטנר</span> </h1>
 <div   alt="" class="backup shadow2" id="iftach_pic"></div>
-<p style="font-size : 110%"> I am a principal researcher at the 
+<p style="font-size : 110%"> I am a principal researcher at  
 <a href="https://stellar.org/">Stellar Development Foundation</a>, on leave from
 the <a href="https://en.cs.tau.ac.il/computer">School of Computer Science</a>
 at <a href="http://www.tau.ac.il">Tel Aviv University</a>. My main research interests are Cryptography and Computational
@@ -238,16 +238,6 @@ at <a href="http://www.tau.ac.il">Tel Aviv University</a>.<br>
 I am the director of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
 Information Security</a> and a member of the <a href="http://www.cs.tau.ac.il/~theory/">Theory of Computation Group</a>.<br>
 -->
-<b>Work Experience</b><br>
-<ul>
-<li> [2022--2024] Principal cryptographer at <a href="https://www.coinbase.com/">Coinbase</a>. <li>
-<li> [2019--2022] Consultant at Unbound Security. <li>
-<li> [2016--2018] Consultant at <a href="https://team8.vc/">Team8</a>, working mostly with <a href="https://team8.vc/portfolio/curv/">Curv</a>. <li>
-<li> [2008--2010] Postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
-Research New England</a>. <li>
-</ul>
-<br>
-
 
 
 <b>Awards and Fellowships</b><br>
@@ -276,8 +266,22 @@ The prizes are given for outstanding papers published in SIAM journals during th
 </ul>
 <br>
 
+<b>At the Industry</b><br>
+<ul>
+<li> [2022--2024] Principal cryptographer at <a href="https://www.coinbase.com/">Coinbase</a>. (Full time.) <li>
+<li> [2019--2022] Consultant at Unbound Security.<li>
+<li> [2016--2018] Consultant at <a href="https://team8.vc/">Team8</a>, working mostly with <a href="https://team8.vc/portfolio/curv/">Curv</a>. <li>
+<li> [2008--2010] Postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
+Research New England</a>. (Full time.) <li>
+<li> [1996--2001] Programmer and team leader in several technology companies. (Full time.) <li>
+</ul>
+<br>
+
+
+
 <b>Grants</b><br>
 <ul>
+<li>[2023-2027] Israel  Science Foundation (ISF) -- Individual research grant. </li>
 <li>[2020-2021] Blavatnik ICRC (Interdisciplinary Cyber Research) -- Group grant. </li>
 <li>[2019-2023] Israel  Science Foundation (ISF) -- Individual research grant. </li>
 <li>[2015-2020] European Research Council (ERC) Starting Grant  -- Individual research grant. </li>
