--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Reingold</a>. I got my Master's degree also
 from the Weizmann Institute, under the supervision of <a href="http://www.wisdom.weizmann.ac.il/%7Eoded/">Oded
 Goldreich</a>, and did my undergraduate studies (Mathematics and
 Computer Science) at <a href="http://www.tau.ac.il/">Tel-Aviv
-university</a>.<br><br>
+University</a>.<br><br>
 
 <!---
 I am a faculty  member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
@@ -248,8 +248,8 @@ Information Security</a> and a member of the <a href="http://www.cs.tau.ac.il/~t
 <li> [2014] The annual fruits of the Raymond and Beverly Sackler Career Development Chair, awarded by the Faculty
 of Exact Sciences, Tel Aviv University, in recognition of academic excellence. </li>
 <li>[2011] One of the three winning papers of the 2011 SIAM Outstanding  Paper Prizes.<br>
-The prizes are given for outstanding papers published in SIAM journals during the three years prior to the year of the award. </li>
-<li> [2008] The John F. Kennedy Prize (awarded by the  Weizmann Institute) </li>
+The prizes are given for outstanding papers published in SIAM journals during the three years before the award's year. <li> 
+[2008] The John F. Kennedy Prize (awarded by the  Weizmann Institute) </li>
 <li> [2008] Intel (Israel) award for outstanding Ph.D. students</li>
 <li> [2008] Rothschild Fellowship for Post-Doctoral  Research (declined)</li>
 <li> [2007] Otto Schwartz prize for excellent studies, PhD</li>
@@ -261,8 +261,8 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 <b>Teaching Awards</b><br>
 <ul>
-<li> [2018] The Tel Aviv university  Rector's Award for Excellence in Teaching. <li>
-<li> [2017] The Tel Aviv university  Rector's Award for Excellence in Teaching. <li>
+<li> [2018] The Tel Aviv University  Rector's Award for Excellence in Teaching. <li>
+<li> [2017] The Tel Aviv University  Rector's Award for Excellence in Teaching. <li>
 </ul>
 <br>
 
