--- a/index.html
+++ b/index.html
@@ -436,15 +436,115 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 <ul id=pub1>
 
 
+
+<li>
+Iftach Haitner and <a href="https://www.iacr.org/cryptodb/data/author.php?authorkey=8633">Nikolaos Makriyannis</a><br>
+<strong>Tight Bounds on Uniform-Challenge Black-Box Reductions from Sigma Protocols</strong> <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span> <br>
+Manuscript 2025<br>
+<a  href="https://eprint.iacr.org/2025/1535">[eprint]</a><br><br> 
+<div class="box">
+<p> 
+Sigma protocols are fundamental cryptographic tools, serving as the foundation of many practical schemes—most notably, the Schnorr identification and signature schemes. To prove the security of Sigma protocols, one typically reduces breaking a Sigma protocol to solving a presumed hard problem (e.g., computing the discrete logarithm in a certain group). In many settings, however, these reductions are not tight: given an adversary that breaks a Sigma protocol with probability 
+, the reduction only yields an adversary for the underlying problem with probability 
+. This quadratic loss affects efficiency, as it forces choosing larger security parameters to reach a target security level.
+
+
+In this work, we show that this quadratic loss is inherent for two natural classes of reductions. For interactive protocols, we prove it for uniform-challenge, black-box reductions, which query the adversary using uniformly sampled challenges. For non-interactive protocols (i.e., in the random-oracle model), we prove it for weakly programmable, black-box reductions, which answer the adversary’s oracle queries with uniformly sampled outputs. Applying our bounds to the reductions from Schnorr identification and signatures to discrete logarithm yields lower bounds that match known positive results—namely, the classical worst-case reduction of Pointcheval and Stern (Journal of Cryptology, 2000) and the higher-moment reduction of Rotem and Segev (Journal of Cryptology, 2024).
+
+Our approach reduces the analysis of such reductions to the values of simple hitting games—combinatorial games that we introduce. Bounding these games is our main technical contribution, and we believe these bounds can enable more modular proofs of related results.
+</p>
+</div>
+</li>
+
+<li>
+Iftach Haitner and <a href="https://yehudalindell.com">Yehuda Lindell</a> and <a href="https://www.iacr.org/cryptodb/data/author.php?authorkey=8633">Nikolaos Makriyannis</a><br>
+<strong>Integer Commitments, Old and New Tools</strong> <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span> <br>
+Manuscript 2025<br>
+<a  href="https://eprint.iacr.org/2025/081">[eprint]</a><br><br> 
+<div class="box">
+<p> 
+This self-contained and detailed tutorial covers RSA-based integer commitments and related protocols. It also presents a new, highly efficient setup protocol for sampling commitment parameters.
+</p>
+</div>
+</li>
+
+
+<li>
+<a href="https://jackdoerner.net">Jack Doerner</a> and Iftach Haitner and <a href="https://yuvali.cswp.cs.technion.ac.il/">Yuval Ishai</a> and <a href="https://www.iacr.org/cryptodb/data/author.php?authorkey=8633">Nikolaos Makriyannis</a><br>
+<strong>From OT to OLE with Subquadratic Communication</strong> <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span> <br>
+CCS 2025<br><br>
+<!--- Draft of full version  <a  href="https://eprint.iacr.org/2018/987">[eprint]</a><br><br> -->
+<div class="box">
+<p> Oblivious Linear Evaluation (OLE) is an algebraic generalization of oblivious transfer (OT) that forms a critical part of a growing
+number of applications. An OLE protocol over a modulus 𝑞enables the receiver party to securely evaluate a line 𝑎·𝑋 +𝑏 chosen by
+the sender party on a secret point 𝑥∈Z𝑞. Motivated by the big efficiency gap between OLE and OT and by fast OT extension
+techniques, we revisit the question of reducing OLE to OT, aiming to improve the communication cost of known reductions.
+We start by observing that the Chinese Remainder Theorem (CRT) can be combined with a prior protocol of Gilboa (Crypto
+’99) to reduce its communication cost from 𝑂(ℓ2)to˜𝑂(ℓ)bits, for ℓ = log 𝑞. Unfortunately, whereas Gilboa’s protocol is secure against a semi-honest sender and a malicious receiver, a direct application
+of the CRT technique is only semi-honest secure (it is insecure against malicious receivers). Thus, we employ number-theoretic
+techniques to protect our CRT-based protocol against malicious receivers, while still retaining a concrete advantage over Gilboa’s
+protocol (e.g., 7.6×less communication for ℓ = 256). Furthermore, we obtain a fully malicious OLE-to-OT reduction by applying either
+information-theoretic techniques with moderate overhead, or RSA-based cryptographic techniques with very low overhead.
+We demonstrate the usefulness of our results in the context
+of OLE applications, including a post-quantum oblivious pseudorandom function (OPRF) and distributed signatures. In particular,
+assuming pre-existing random OT correlations, we can use our
+malicious-receiver OLE protocol to realize (a single instance of)
+the power-residue based OPRF candidate with security against a malicious client and a semi-honest server using only 1.14 KB of communication, a 16×improvement over the best previous protocol in
+this setting. Using our RSA-based fully malicious OLE protocol, we
+achieve a 5×communication improvement over previous OT and
+EC-based distributed ECDSA protocols. Compared to other ECDSA
+protocols (including ones that use Paillier and class groups), the
+communication gains are more modest, but come at only a fraction of the computational cost as we avoid all expensive group
+operations.
+</p>
+</div>
+</li>
+
+
+<li>
+<a href="https://crypto.stanford.edu/~dabo/">Dan Boneh</a> and Iftach Haitner and <a href="https://yehudalindell.com">Yehuda Lindell</a> and <a href="https://www.gilsegev.net">Gil Segev</a><br>
+<strong>Exponent-VRFs and Their Applications</strong> <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span> <br>
+Eurocrypt 2025<br>
+Draft of full version  <a  href="https://eprint.iacr.org/2018/987">[eprint]</a><br><br>
+<div class="box">
+<p>
+Verifiable random functions (VRFs) are  pseudorandom functions where the function owner can prove that a generated output is correct relative to a committed key. In this paper we introduce the notion of an exponent-VRF (eVRF): a VRF that  does not provide its output <span class=blu2>y</span>
+ explicitly, but instead provides <span class=blu2>Y=y &#183;  G</span>, where <span class=blu2>G</span>,
+ is a generator of some finite cyclic group (or <span class=blu2>Y= g<sup>y</sup></span>
+ in multiplicative notation). We construct eVRFs from the Paillier encryption scheme and from DDH, both in the random-oracle model.  We then show that an eVRF is a powerful tool that has many important applications in threshold cryptography. In particular, we construct (1) a one-round fully simulatable distributed key-generation protocol (after a single two-round initialization phase), (2) a two-round fully simulatable signing protocol for multiparty Schnorr with a deterministic variant,  (3) a two-party ECDSA protocol that has a deterministic variant, (4) a threshold Schnorr signing protocol where the parties can later prove that they signed without being able to frame another group, and (5) an MPC-friendly and verifiable HD-derivation. All these applications are derived from this single new eVRF abstraction, and the resulting protocols are concretely efficient.
+</p>
+</div>
+</li>
+
+
+<li>
+Iftach Haitner and <a href="https://yehudalindell.com">Yehuda Lindell</a> and <a href="https://u.cs.biu.ac.il/~nofarie">Ariel Nof
+</a> and <a href="https://www.iacr.org/cryptodb/data/author.php?authorkey=7708">Samuel Ranellucci</a><br>
+<strong>Fast Secure Multiparty ECDSA with Practical Distributed Key Generation and Applications to Cryptocurrency Custody</strong> <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span> <br>
+Manuscript 2023. (An extended abstract of this work (by the second and third authors) appeared at CCS 2018.)<br>
+<a  href="https://eprint.iacr.org/2018/987">[eprint]</a><br><br>
+<div class="box">
+<p>
+ECDSA is a standardized signing algorithm that is widely used in TLS, code signing, cryptocurrency and more. Due to its importance, the problem of securely computing ECDSA in a distributed manner (known as threshold signing) has received considerable interest. Despite this interest, however, as of the time of publication of the conference version of this paper ([Lindel and Nof, ACM SIGSAC 18'), there had been no full threshold solution for more than two parties (meaning that any t-out-of-n parties can sign, security is preserved for any t−1 or fewer corrupted parties, and t ≤ n can be any value) that supports practical key distribution. All previous solutions for this functionality utilized Paillier homomorphic encryption, and efficient distributed Paillier key generation for more than two parties is not known.
+In this paper, we present the first (again, for the conference version publication time) truly practical full threshold ECDSA signing protocol that has fast signing and key generation. This solves an old open problem and opens the door to many practical uses of threshold ECDSA signing that are in demand today. One of these applications is the construction of secure cryptocurrency wallets (where key-shares are spread over multiple devices, and so are hard to steal) and cryptocurrency custody solutions (where large sums of invested cryptocurrency are strongly protected by splitting the key between a bank/financial institution, the customer who owns the currency, and possibly a third-party trustee, in multiple shares at each). There is growing practical interest in such solutions, but prior to our work, these could not be deployed due to the need for a distributed key generation.
+</p>
+</div>
+</li>
+
+
+
+
 <li>
 Iftach Haitner and Noam Mazor and <a href="https://sites.google.com/view/jadsilbak">Jad Silbak</a><br>
-<strong>Incompressiblity and Next-Block Pseudoentropy</strong> <img src="new.png" class=update1><br>
+<strong>Incompressiblity and Next-Block Pseudoentropy</strong><br>
 <span class=abslide>[abstract]</span> <br>
 ITCS 2023<br>
 Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2022/032/">[eccc]</a><br><br>
-
-
-
 <div class="box">
 <p>
 A distribution is k-incompressible, Yao [FOCS ’82], if no efficient compression scheme compresses it to less than k bits. While being a natural measure, its relation to other computational analogs of entropy such as pseudoentropy, Hastad, Impagliazzo, Levin, and Luby [SICOMP 99], and to other cryptographic hardness assumptions, was unclear.<br><br>
@@ -458,7 +558,7 @@ We advance towards a better understating of this notion, showing that a k-incomp
 
 <li>
 Iftach Haitner and Daniel Nukrai and <a href="https://www.eylonyogev.com/about">Eylon Yogev</a> <br>
-<strong>Lower Bound on SNARGs in the Random Oracle Model</strong> <img src="new.png" class=update1><br>
+<strong>Lower Bound on SNARGs in the Random Oracle Model</strong><br>
 <span class=abslide>[abstract]</span> <br>
 Crypto 2022<br>
 Draft of full version  <a  href="https://eprint.iacr.org/2022/178">[ePrint]</a><br><br>
@@ -473,7 +573,7 @@ Assuming the \textit{randomized exponential-time hypothesis}, we prove a tight l
 
 <li>
 Iftach Haitner and Nikolaos Makriyannis and Samuel Ranellucci  and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
-<strong>Highly Efficient OT-Based Multiplication Protocols</strong> <img src="new.png" class=update1><br>
+<strong>Highly Efficient OT-Based Multiplication Protocols</strong><br>
 <span class=abslide>[abstract]</span> <br>
 Eurocrypt 2022<br>
 Draft of full version  <a  href="https://eprint.iacr.org/2021/1373">[ePrint]</a><br><br>
@@ -487,7 +587,7 @@ We present a new OT-based two-party multiplication protocol that is almost as ef
 
 <li>
 Iftach Haitner and Noam Mazor and <a href="https://sites.google.com/view/jadsilbak">Jad Silbak</a> and <a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a> <br>
-<strong>On the Complexity of Two-Party Differential Privacy</strong> <img src="new.png" class=update1><br>
+<strong>On the Complexity of Two-Party Differential Privacy</strong><br>
 <span class=abslide>[abstract]</span> <br>
 STOC 2022<br>
 Draft of full version  <a  href="https://arxiv.org/abs/2108.07664">[arxiv]</a><br><br>
@@ -525,7 +625,7 @@ We study time/memory tradeoffs of function inversion: an algorithm, i.e.,  an  i
  tries to invert a randomly chosen output <span class=blu2>y</span> of <span class=blu2>f</span>  (i.e., to find <span class=blu2>x</span> such that <span class=blu2>f(x)=y</span>).  <br><br>
   
 Much progress was done regarding  adaptive function inversion---the inverter is allowed to make  adaptive  oracle queries. 
- <span class=blu1>Hellman [IEEE transactions on Information Theory '80]  </span> presented an adaptive  inverter   that inverts with high probability  a random <span class=blu2>f</span>. 
+ <span class=blu1>Hellman [IEEE transactions on Information Theory '80]  </span> presented an adaptive  inverter   that inverts with high probability a random <span class=blu2>f</span>. 
  <span class=blu1>Fiat and Naor [SICOMP '00]</span> proved that  for any <span class=blu2>s,q</span> with <span class=blu2>s<sup>2</sup>q = n<sup>2</sup></span>  (ignoring low-order  terms), an <span class=blu2>s</span>-advice, <span class=blu2>q</span>-query   
  variant of Hellman's  algorithm inverts a constant fraction of the image points of any function.   <span class=blu1>Yao  [STOC '90]</span> proved a lower bound of <span class=blu2>sq &ge;  n</span> for  this problem. 
  Closing the gap between the above lower and upper bounds is a long-standing open question.
