--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@ d.addEventListener ? d.addEventListener("click",_gaLt,!1) : d.attachEvent && d.a
   <div id=topwrap style="padding-left : 40px">
 <h1>Iftach Haitner - <span style="font-size : 125%"> יפתח הייטנר</span> </h1>
 <div   alt="" class="backup shadow2" id="iftach_pic"></div>
-<p style="font-size : 110%"> I am a principal researcher at  
-<a href="https://stellar.org/">Stellar Development Foundation</a>, on leave from
-the <a href="https://en.cs.tau.ac.il/computer">School of Computer Science</a>
-at <a href="http://www.tau.ac.il">Tel Aviv University</a>. My main research interests are Cryptography and Computational
+<p style="font-size : 110%"> I am a faculty  member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
+at <a href="http://www.tau.ac.il">Tel Aviv University</a> and a principal researcher at  
+<a href="https://stellar.org/">Stellar Development Foundation (SDF)</a>. My main research interests are Cryptography and Computational
 Complexity.
 <!---
 A faculty member at . I am the director of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
@@ -220,10 +219,9 @@ Mail: Iftach Haitner, Tel Aviv university, P.O.B. 39040, Ramat Aviv, Tel Aviv 69
 
 <div class="bio top">
 <h2>Short Biography </h2>
-I am a principal researcher at the 
-<a href="https://stellar.org/">Stellar Development Foundation</a>, on leave from
-the <a href="https://en.cs.tau.ac.il/computer">School of Computer Science</a>
-at <a href="http://www.tau.ac.il">Tel Aviv University</a>.
+I am a faculty  member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
+at <a href="http://www.tau.ac.il">Tel Aviv University</a> and a principal researcher at the 
+<a href="https://stellar.org/">Stellar Development Foundation</a>.
 I received my PhD in 2008 from the <a href="http://www.wisdom.weizmann.ac.il/">Faculty of
 Mathematics and Computer Science, Weizmann Institute of Science</a>,  under the supervision of <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/">Omer
 Reingold</a>. I got my Master's degree also
@@ -268,8 +266,12 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 <b>At the Industry</b><br>
 <ul>
+
+
+
+<li> [2024--]  Principal researcher at <a href="https://stellar.org/">Stellar Development Foundation</a><li>
 <li> [2022--2024] Principal cryptographer at <a href="https://www.coinbase.com/">Coinbase</a>. (Full time.) <li>
-<li> [2019--2022] Consultant at Unbound Security.<li>
+<li> [2019--2022] Cryptographer at Unbound Security.<li>
 <li> [2016--2018] Consultant at <a href="https://team8.vc/">Team8</a>, working mostly with <a href="https://team8.vc/portfolio/curv/">Curv</a>. <li>
 <li> [2008--2010] Postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 Research New England</a>. (Full time.) <li>
@@ -310,6 +312,10 @@ Research New England</a>. (Full time.) <li>
 <b>Program Committees</b><br>
 <ul>
 
+
+<li> <a href="https://eurocrypt.iacr.org/2025">Eurocrypt 2025</a></li>
+
+<li> <a href="https://eurocrypt.iacr.org/2022">Eurocrypt 2022</a></li>
 
 
 <li> <a href=https://www.itsoc.org/conferences/submit/information-theoretic-cryptography-itc-2020>Conference on Information-Theoretic Cryptography (ITC) 2020</a></li>
