--- a/index.html
+++ b/index.html
@@ -1172,8 +1172,9 @@ Finally, we show that our positive results are in a sense optimal, by proving th
 <li>
 Iftach Haitner and <a href="http://www.eecs.harvard.edu/%7Esalil/"> Salil Vadhan </a> <br>
 <strong>The Many Entropies in One-Way Functions</strong> <br>
-<span class=abslide>[abstract]</span>   <a href="papers/ManyEntInOWF/ManyEntInOWF_SingleFile.pdf">[pdf]</a><br>
-A chapter in <a href="https://link.springer.com/book/10.1007%2F978-3-319-57048-8">Tutorials on the Foundations of Cryptography</a> dedicated to <a href="http://www.wisdom.weizmann.ac.il/~oded/"> Oded Goldreich</a>  60th  birthday, 2017<br><br>
+<span class=abslide>[abstract]</span><br>
+A chapter in <a href="https://link.springer.com/book/10.1007%2F978-3-319-57048-8">Tutorials on the Foundations of Cryptography</a> dedicated to <a href="http://www.wisdom.weizmann.ac.il/~oded/"> Oded Goldreich</a>  60th  birthday, 2017<br>
+<a href="https://eccc.weizmann.ac.il/report/2017/084/">[eccc]</a><br><br>
 
 
 
@@ -1653,7 +1654,7 @@ Iftach Haitner,  <a href="http://www.cs.princeton.edu/%7Emohammad/">Mohammad Mah
 <strong>New Sampling Protocol and Applications to Basing Cryptographic Primitives on the Hardness of NP</strong><br>
 <span class=abslide>[abstract]</span> <br>
 Complexity 2010<br>
-<a href="papers/SampleWithSize/SampleWithSize.pdf">[pdf]</a>
+<a href="https://eccc.weizmann.ac.il/report/2010/001/">[eccc]</a>
 </p>
 <div class="box" >
 <p>
@@ -1721,8 +1722,10 @@ prover can convince the verifier of a false statement). These results resolve an
 <li>
 <p>Iftach Haitner,   <a href="http://www.eecs.harvard.edu/%7Ealon/">Alon Rosen</a> and  <a href="http://www.cs.haifa.ac.il/%7Eronen/">Ronen Shaltiel</a><br>
  <b> On the (Im)Possibility of Arthur-Merlin Witness Hiding Protocols</b><br>
-<span class=abslide>[abstract]</span> <a href="papers/WitnessHiding/WitnessHidingTCC.ppsx">[slides]</a><br>
-TCC 2009 <a href="papers/WitnessHiding/WitnessHidingLB.pdf">[pdf]</a>
+<span class=abslide>[abstract]</span><br>
+ <a href="papers/WitnessHiding/WitnessHidingTCC.ppsx">[slides]</a><br>
+TCC 2009 <br>
+<a href="papers/WitnessHiding/WitnessHidingLB.pdf">[pdf]</a>
 </p>
 <div class="box" >
 <p>
@@ -1755,7 +1758,7 @@ Iftach Haitner and <a href="http://research.microsoft.com/users/thomahol/">Thoma
 <b>On the (Im)Possibility of Key Dependent Encryption</b><br>
 <span class=abslide>[abstract]</span> <a href="papers/AccessibleEntropy/AccEntSemniar_f.pptx">[slides]</a> <br>
 TCC 2009<br>
-<a href="papers/KDI/KDI-full.pdf">[pdf]</a>
+<a href="https://eprint.iacr.org/2008/164">[ePrint]</a>
 </p>
 <div class="box"  >
 <p>
@@ -1888,7 +1891,7 @@ by <span class=blu1>Nguyen, Ong and Vadhan [FOCS `06]</span>, and universal one-
 <span class=abslide>[abstract]</span> <a href="papers/IneractiveHashing/IHSeminar_F.ppt">[slides]</a><br>
 Complexity 2007<br>
 Journal of Cryptology 2014 <a  href="http://link.springer.com/article/10.1007/s00145-012-9139-0">[link]</a><br>
- <a  href="papers/IneractiveHashing/IneractiveHashing_Jour.pdf">[pdf]</a>
+ <a  href="https://eccc.weizmann.ac.il/report/2006/096/download/">[eccc]</a>
 </p>
 <div class="box" >
 <p>
@@ -1919,7 +1922,7 @@ Iftach Haitner,   <a href="http://www.wisdom.weizmann.ac.il/%7Eharnik/"> Danny H
 <span class=abslide>[abstract]</span> <a href="papers/RandomizedIteate/Randomized_Iterate.pps">[slides]</a><br>
 Crypto 2006<br>
 SIAM Journal of Computing 2011   <a  href="http://epubs.siam.org/doi/abs/10.1137/080721820">[link]</a><br>
- <a href="papers/RandomizedIteate/RandomIterate.pdf">[pdf]</a>
+ <a href="https://eccc.weizmann.ac.il/report/2005/135/download">[eccc]</a>
 </p>
 
 <div class="box">
@@ -1975,7 +1978,7 @@ functions, and further develops them.
 <span class=abslide>[abstract]</span> <a href="papers/SCfromRegularOWF/SCfromRegularOWF.pps">[slides]</a><br>
 Eurocrypt 2005<br>
 Journal of Cryptology 2009 <a  href="http://link.springer.com/content/pdf/10.1007/s00145-007-9012-8">[link]</a><br>
- <a href="papers/SCfromRegularOWF/SCfromRegularOWF.pdf">[pdf]</a>
+ <a href="https://eprint.iacr.org/2004/341.pdf">[ePrint]</a>
 </p>
 <div class="box"  >
 <p>
