--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ Research New England</a>. (Full time.) <li>
 
 <b>Editor</b><br>
 <ul>
-<li> <a href="https://www.siam.org/Publications/Journals/SIAM-Journal-on-Computing-SICOMP/editorial-board">SIAM Journal on Computing (SICOMP)</a></li>
+<li> <a href="https://www.siam.org/Publications/Journals/SIAM-Journal-on-Computing-SICOMP/editorial-board">SIAM Journal on Computing (SICOMP), 2020-2024</a></li>
 </ul>
 
 <b>Program Committees</b><br>
@@ -371,13 +371,14 @@ Research New England</a>. (Full time.) <li>
 <h2> Teaching  </h2>
 <ul>
 
+<li><a  href="https://moodle.tau.ac.il/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (Fall 25)</a></li>
+
+
 <li><a  href="http://moodle.tau.ac.il/2020/course/view.php?id=368413101"> Foundation  of Cryptography, Advanced Topics (Spring 21)</a></li>
 
 
 <li><a href="http://moodle.tau.ac.il/2020/course/view.php?id=368220001">Computational Models (Fall 20)</a></li>
 
-
-<li><a  href="http://moodle.tau.ac.il/2020/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (Fall 20)</a></li>
 
 
 <li><a href="https://moodle.tau.ac.il/2020/course/view.php?id=368419101"> Applications of Combinatorics Tools in Cryptography  (student seminar)&nbsp; (Fall 20)</a></li>
