--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ This self-contained and detailed tutorial covers RSA-based integer commitments a
 <a href="https://jackdoerner.net">Jack Doerner</a> and Iftach Haitner and <a href="https://yuvali.cswp.cs.technion.ac.il/">Yuval Ishai</a> and <a href="https://www.iacr.org/cryptodb/data/author.php?authorkey=8633">Nikolaos Makriyannis</a><br>
 <strong>From OT to OLE with Subquadratic Communication</strong> <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
-CCS 2025<br>
+ACM CCS 2025 (Distinguished Paper Award)<br>
 <a  href="https://eprint.iacr.org/2025/1722">[eprint]</a><br><br>
 <div class="box">
 <p> Oblivious Linear Evaluation (OLE) is an algebraic generalization of oblivious transfer (OT) that forms a critical part of a growing
